--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node-opus": "^0.2.1",
     "request": "^2.81.0",
     "underscore": "^1.8.3",
-    "ytdl-core": "^0.12.0",
+    "xmljson": "^0.2.0",
     "moment": "^2.18.0"
   }
 }
