--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request": "^2.81.0",
     "underscore": "^1.8.3",
     "xmljson": "^0.2.0",
+    "striptags": "^3.1.1",
     "moment": "^2.18.0"
   }
 }
