--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-node_modules/*
+node_modules/
 config/default.json
 src/commands/music/queue/
-build/*
-src/data/music/queue/*
-package-lock.json
-src/commands/owner/servers.js
