--- a/package.json
+++ b/package.json
@@ -17,15 +17,21 @@
   },
   "homepage": "https://github.com/deletebeach666/SchwiftyBot#README",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "config": "^1.25.1",
+    "create-if-not-exist": "0.0.2",
     "discord.js": "^11.0.0",
     "discord.js-commando": "^0.9.0",
+    "express": "^4.16.3",
     "goo.gl": "^0.1.4",
+    "is-reachable": "^2.4.0",
+    "moment": "^2.18.0",
     "node-opus": "^0.2.1",
-    "request": "^2.81.0",
+    "npm-check-updates": "^2.14.1",
+    "request": "^2.85.0",
+    "striptags": "^3.1.1",
     "underscore": "^1.8.3",
     "xmljson": "^0.2.0",
-    "striptags": "^3.1.1",
-    "moment": "^2.18.0"
+    "ytdl-core": "^0.20.2"
   }
 }
